demoOrg/objects/CBGA_Quadrant__c.object
<CustomObject>
    <description>One city may contain multiple Quadrant. One quadrant is made up of 4 blocks.</description>
    <fields>
        <fullName>CB_City__c</fullName>
        <description>This field represents the Master detail relationship with the city object.</description>
        <inlineHelpText>City to which quadrant belongs</inlineHelpText>
        <label>City</label>
        <referenceTo>CBGA_City__c</referenceTo>
        <relationshipLabel>Quadrants</relationshipLabel>
        <relationshipName>Quadrants</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CB_Icon_Image_URL__c</fullName>
        <description>This field stores the URL of an icon image, which would be shown throughout the application.</description>
        <inlineHelpText>This field stores the URL of an icon image, which would be shown throughout the application.</inlineHelpText>
        <label>Icon Image URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CB_Quadrant_Name__c</fullName>
        <description>This field represents the Name of the Quadrant, which would be displayed along with the image on the Quadrant block.</description>
        <inlineHelpText>This field represents the Name of the Quadrant.</inlineHelpText>
        <label>Quadrant Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CB_Sequence__c</fullName>
        <description>Sequence of the Quadrant to be shown on the UI, It will also maintain the levels.</description>
        <inlineHelpText>Sequence of the Quadrant to be shown on the UI, It will also maintain the levels.</inlineHelpText>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Quadrant</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CB_City__c</columns>
        <columns>CB_Icon_Image_URL__c</columns>
        <columns>CB_Quadrant_Name__c</columns>
        <columns>CB_Sequence__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Quadrant - {0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quadrants</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Sequence_Number_Must_be_Greater_than_0</fullName>
        <active>true</active>
        <description>Sequence Number Must be Greater than 0</description>
        <errorConditionFormula>CB_Sequence__c &lt;= 0</errorConditionFormula>
        <errorDisplayField>CB_Sequence__c</errorDisplayField>
        <errorMessage>Sequence should be more than 0</errorMessage>
    </validationRules>
</CustomObject>